Fix horizontal scrollbar

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -163,8 +163,6 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
 
         ul {
             padding-left: 40px;
@@ -228,7 +226,7 @@ main {
 
     &__image {
         @media (min-width: $breakpoint-laptop) {
-            margin-left: 15%;
+            padding-left: 15%;
         }
     }
 }
@@ -244,9 +242,12 @@ main {
 
     &__heading {
         color: #000000;
-        font-size: 44px;
-        line-height: 38px;
+        font-size: 28px;
+        line-height: 0.864;
         margin-bottom: 16px;
+        @media (min-width: $breakpoint-mobile) {
+            font-size: 44px;
+        }
     }
 
     &__text {
